[optin/reporting/client] fix: alignment betweem address, hash and balance

--- a/optin/reporting/client/src/styles/globals.scss
+++ b/optin/reporting/client/src/styles/globals.scss
@@ -24,7 +24,6 @@
   font-weight: bold;
   text-decoration: underline;
   border: 1px solid !important;
-  padding: 5px;
 }
 
 .copy-button {
@@ -40,6 +39,7 @@
 
 .list-item {
   font-family: monospace;
+  height: 20px;
 }
 
 .download-button {
